🎨 style(main.scss): add overflow: hidden to body to prevent scrolling on the page

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  overflow: hidden;
+}
+
 em,
 p {
   font-weight: 300;
